--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -281,6 +281,11 @@ main {
       margin-bottom: 5px;
       padding-left: 10vh;
       padding-right: 10vh;
+      p {
+        font-weight: bold;
+        margin-top: 5px;
+        margin-bottom: 5px;
+      }
     }
   }
 }
