fix content & fix a color

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -189,7 +189,7 @@ main section.emotionalMoment a:visited,
 main section.selfPrinciple a:visited,
 main section.selfDoing a:visited,
 main section.anythingElse a:visited {
-  color: #1d1d1d;
+  color: #a7a7a7;
 }
 main section.selfIntro a:hover,
 main section.emotionalMoment a:hover,
