--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -79,8 +79,8 @@ main {
     align-items: center;
     div.info {
       flex-basis: 450px;
-      // border: 2px solid black;
-      padding: 1rem;
+      //border: 2px solid black;
+      padding: 4rem;
       h1.title {
         letter-spacing: 0.01rem;
         span {
@@ -116,7 +116,8 @@ main {
     }
     div.img {
       flex-basis: 450px;
-      // border: 2px solid red;
+      //border: 2px solid red;
+      text-align: center;
       img {
         width: 60%;
       }
