--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,7 +22,7 @@ h6 {
 
 header div.info {
   padding: 10rem;
-  background-image: url(/images/header.jpg);
+  background-image: url("/images/header.jpg");
   background-position: center;
   display: flex;
   flex-direction: column;
