update css bg link

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -23,7 +23,7 @@ h6 {
 header {
   div.info {
     padding: 10rem;
-    background-image: url("/images/header.jpg");
+    background-image: url("../images/header.jpg");
     background-position: center;
     display: flex;
     flex-direction: column;
